force-app/main/default/objects/SMS_CreditsAutomationHistory__c/SMS_CreditsAutomationHistory__c.object-meta.xml
<CustomObject>
    <label>SMS Credits Automation History</label>
    <nameField>
        <displayFormat>BCA-{0000000}</displayFormat>
        <label>SMS Credits Automation History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Credits Automation Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>