force-app/main/default/objects/SMS_CreditsAutomationHistory__c/fields/IsValid__c.field-meta.xml
<CustomField>
    <fullName>IsValid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsValid</label>
    <type>Checkbox</type>
</CustomField>