force-app/main/default/objects/SMS_CreditsAutomationHistory__c/fields/SubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionId__c</fullName>
    <label>SubscriptionId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>