force-app/main/default/objects/SMS_CreditsAutomationHistory__c/fields/Zuora_Rate_Plan__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Rate_Plan__c</fullName>
    <label>Zuora Rate Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>