force-app/main/default/objects/SMS_CreditsAutomationHistory__c/fields/Zuora_Rate_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Rate_Plan_Id__c</fullName>
    <label>Zuora Rate Plan Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>