force-app/main/default/objects/SMS_CreditsAutomationHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>FileName__c</columns>
    <columns>IsValid__c</columns>
    <columns>Status__c</columns>
    <columns>SubscriptionId__c</columns>
    <columns>Zuora_Rate_Plan__c</columns>
    <columns>Status_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>